fixed some spacing/form styling on index comments

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -51,8 +51,7 @@ body {
     font-size: 18px;
 }
 
-.card p,
-.card .message {
+.card p, .card .message {
     font-size: 18px;
     margin: 20px;
 }
@@ -84,10 +83,17 @@ input.boolean label {
     background-color: #125688;
     width: 100%;
     border: none;
-    font-size: 24px;
+    font-size: 20px;
     color: white;
     margin-top: 10px;
     font-family: 'Josefin Sans', sans-serif;
+    -webkit-transition-duration: 0.4s;
+}
+
+.my-btn:hover {
+    background-color: #317eb7;
+    cursor: hand;
+    cursor: pointer;
 }
 
 .gram-actions a {
